--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Proyecto/MenuProyecto.cshtml
@@ -6,7 +6,7 @@
 <link href="~/css/Proyectos.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
-<div class="d-flex vh-100">
+<div class="d-flex" style="height:100%">
     <!-- Sidebar -->
     <nav id="sidebar" class="col-lg-2 bg-dark text-light">
         <div class="position-sticky">
