Squashed commit of the following:
commit 95cf9a7de1c742dcc251edef81800ebc695b24de
Merge: 65d1bdd 4cb15cc
Author: gerarmoca2210 <107732808+gerarmoca2210@users.noreply.github.com>
Date:   Wed Nov 20 16:45:47 2024 -0600

    Merge pull request #94 from XGuadamuz/Gerardo-Sprint-3

    Added Dashboard

commit 4cb15cc0cbe0e08f38a50cf8d143c259b749dc9c
Author: GERARDO MORA <gmora60255@ufide.ac.cr>
Date:   Wed Nov 20 16:45:29 2024 -0600

    Dashboard db

commit e9043ca101aa3abc5d2496e4015644110ec651d7
Author: GERARDO MORA <gmora60255@ufide.ac.cr>
Date:   Wed Nov 20 16:44:26 2024 -0600

    Added Dashboard

commit 65d1bdd0349f7e212041e5ce7770abbb6bc5bb6a
Merge: f63c215 7e24716
Author: gerarmoca2210 <107732808+gerarmoca2210@users.noreply.github.com>
Date:   Wed Nov 20 13:38:28 2024 -0600

    Merge pull request #93 from XGuadamuz/Gerardo-Sprint-3

    Gerardo sprint 3

commit 7e24716bb57ce3afa9db154d900c8b15aa27aea1
Merge: e8f8dd1 f63c215
Author: GERARDO MORA <gmora60255@ufide.ac.cr>
Date:   Wed Nov 20 13:38:05 2024 -0600

    Merge dev

commit e8f8dd1c737cf3c3f1ce1f4157fbf43043c478d6
Author: GERARDO MORA <gmora60255@ufide.ac.cr>
Date:   Wed Nov 20 13:34:37 2024 -0600

    Se agregan Hitos

commit f63c2153a5e99661bbdd40e47ce37804def89d62
Author: XavierEstrada <xguadamuz70935@ufide.ac.cr>
Date:   Wed Nov 20 01:16:38 2024 -0600

    Correccion en diseño de botones

commit 422652636c7928fab8276beddeccf8aee53af828
Author: LeonardoCZZ <leocorzum@gmail.com>
Date:   Tue Nov 19 00:38:23 2024 -0600

    Cambiar Estado de Proyecto

commit cfd87641b11f931f77fc7218ebc670dac7ec2638
Author: LeonardoCZZ <leocorzum@gmail.com>
Date:   Mon Nov 18 06:47:56 2024 -0600

    Cierres Financieros Mensuales y Personalizar informes

commit cba9db3f65410da729072c814842854d2da80a6c
Merge: 78ef7b0 feb0350
Author: XavierEstrada <xguadamuz70935@ufide.ac.cr>
Date:   Sun Nov 17 23:50:28 2024 -0600

    Merge branch 'Xavier' into devCore

commit feb03509785c1d3ff99ad6d4e8c4cf6e85d4b616
Author: XavierEstrada <

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Facturas/VisualizarFacturas.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Facturas/VisualizarFacturas.cshtml
@@ -11,6 +11,21 @@
     <div class="text-end mb-3">
         <a href="~/Facturas/RegistroFactura" class="btn btn-primary">Registrar Nueva Factura</a>
         <a asp-action="DescargarFacturasHTML" class="btn btn-danger">Descargar HTML</a>
+        <a href="~/CierresFinancieros/VisualizarCierres" class="btn btn-secondary">Visualizar Cierres Financieros Anuales</a>
+        <a href="~/CierresFinancieros/VisualizarCierresMensuales" class="btn btn-secondary">Visualizar Cierres Financieros Mensuales</a>
+    </div>
+
+    <!-- Mostrar las métricas personalizadas -->
+    <div class="row mb-4">
+        <div class="col-md-4">
+            <h4>Total de Facturas: @ViewBag.TotalFacturas.ToString("C")</h4>
+        </div>
+        <div class="col-md-4">
+            <h4>Total de Impuestos: @ViewBag.TotalImpuestos.ToString("C")</h4>
+        </div>
+        <div class="col-md-4">
+            <h4>Promedio de Factura: @ViewBag.PromedioFactura.ToString("C")</h4>
+        </div>
     </div>
 
     <div class="table-responsive">
@@ -23,11 +38,14 @@
                     <th>Fecha de Emisión</th>
                     <th>Monto Total</th>
                     <th>Descripción</th>
+                    <th>Impuesto</th>
+                    <th>Acciones</th>
                 </tr>
             </thead>
             <tbody>
                 @foreach (var factura in Model)
                 {
+                    decimal impuesto = factura.MontoTotal * 0.16m;
                     <tr>
                         <td>@factura.IdFactura</td>
                         <td>@(factura.Proveedor != null ? factura.Proveedor.Nombre : "Proveedor no encontrado")</td>
@@ -35,6 +53,10 @@
                         <td>@factura.FechaEmision.ToShortDateString()</td>
                         <td>@factura.MontoTotal</td>
                         <td>@factura.Descripcion</td>
+                        <td>@impuesto.ToString("C")</td>
+                        <td>
+                            <a asp-action="EditarFactura" asp-route-id="@factura.IdFactura" class="btn btn-warning btn-sm">Editar</a>
+                        </td>
                     </tr>
                 }
             </tbody>
