--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -59,6 +59,7 @@
                                     <li><a class="dropdown-item" asp-controller="Empleado" asp-action="VisualizarEmpleados">Recursos Humanos</a></li>
                                     <li><a class="dropdown-item" asp-controller="Inventario" asp-action="VisualizarInventario">Inventario</a></li>
                                     <li><a class="dropdown-item" asp-controller="Proveedores" asp-action="VisualizarProveedores">Proveedores</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Archivos" asp-action="VerArchivosRecientes">Archivos</a></li>
                                 </ul>
                             </li>
                         }
