Se añade el módulo de reportes para supervisores

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -42,6 +42,7 @@
                                     <li><a class="dropdown-item" asp-controller="Proyecto" asp-action="Proyectos">Proyectos</a></li>
                                     <li><a class="dropdown-item" asp-controller="Facturas" asp-action="VisualizarFacturas">Contabilidad</a></li>
                                     <li><a class="dropdown-item" href="#">Maquinaria</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Reportes" asp-action="VerReportesRecientes">Reportes</a></li>
                                 </ul>
                             </li>
                         }
