Se añade un módulo para la generación de reportes

--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -43,6 +43,7 @@
                                     <li><a class="dropdown-item" asp-controller="Facturas" asp-action="VisualizarFacturas">Contabilidad</a></li>
                                     <li><a class="dropdown-item" href="#">Maquinaria</a></li>
                                     <li><a class="dropdown-item" asp-controller="Reportes" asp-action="VerReportesRecientes">Reportes</a></li>
+                                    <li><a class="dropdown-item" asp-controller="InformeProgreso" asp-action="GenerarInforme">Informes</a></li>
                                 </ul>
                             </li>
                         }
