--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Shared/_Layout.cshtml
@@ -44,6 +44,8 @@
                                     <li><a class="dropdown-item" href="#">Maquinaria</a></li>
                                     <li><a class="dropdown-item" asp-controller="Reportes" asp-action="VerReportesRecientes">Reportes</a></li>
                                     <li><a class="dropdown-item" asp-controller="Informes" asp-action="GenerarInforme">Informes</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Cronograma" asp-action="Cronograma">Cronogramas</a></li>
+
                                 </ul>
                             </li>
                         }
