--- a/ProyectoSGIO/ProyectoSGIOCore/Views/Dependencias/Cronograma.cshtml
+++ b/ProyectoSGIO/ProyectoSGIOCore/Views/Dependencias/Cronograma.cshtml
@@ -1,4 +1,4 @@
-﻿@model ProyectoSGIOCore.ViewModels.CronogramaViewModel
+﻿@model ProyectoSGIOCore.ViewModels.CronogramaVM
 
 @{
     ViewBag.Title = "Cronograma del Proyecto";
